--- a/src/components/iphone/style.less
+++ b/src/components/iphone/style.less
@@ -127,3 +127,10 @@
     align-items: center;
     padding: 0 10px;
   }
+
+  .minMaxTemps {
+    font-size: 1.5rem;
+    color: #ffffff;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
+  }
+  
