high and low pollen icons

--- a/src/components/iphone/style.less
+++ b/src/components/iphone/style.less
@@ -133,4 +133,8 @@
     color: #ffffff;
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
   }
-  
+  .pollenRiskImg {
+	max-width: 24px;
+	max-height: 24px;
+	object-fit: contain;
+  }
