--- a/src/components/iphone/style.less
+++ b/src/components/iphone/style.less
@@ -133,7 +133,7 @@
     color: #ffffff;
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
   }
-  .pollenRiskImg {
+  .pollenRiskImage {
 	max-width: 24px;
 	max-height: 24px;
 	object-fit: contain;
