--- a/src/components/iphone/style.less
+++ b/src/components/iphone/style.less
@@ -40,7 +40,7 @@
   .temperature {
     font-size: 4.8em;
     font-weight: 300;
-    letter-spacing: -6px;
+    letter-spacing: -2px;
     text-shadow: 1px 1px #000;
     margin-bottom: 15px;
   }
@@ -66,8 +66,13 @@
     margin-bottom: 5px;
     text-shadow: 1px 1px #000;
   }
-  
 
+  .minMaxTemps {
+    font-size: 1.5rem;
+    color: #ffffff;
+    text-shadow: 1px 1px #000;
+  }
+  
 .search {
     transition: width 0.5s, border-radius 0.5s;
     width: 40px;
@@ -109,15 +114,39 @@
     margin-bottom: 20px;
     margin-left: 20px;
   }
+  
+  .forecastItemTime,
+  .forecastItemTemp {
+    text-shadow: 1px 1px #000;
+  }
 
-  .hourlyForecast {
-    overflow-x: auto;
-    white-space: nowrap;
+  .hourlyForecastOverlay {
+    position: absolute;
+    bottom: 50px; /* Adjust this value to move the overlay up or down */
+    left: 0;
+    width: 100%;
+    height: 110px;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    z-index: 1;
   }
   
+  .hourlyForecast {
+    position: absolute; /* Change from relative to absolute */
+    z-index: 2;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 110px;
+    padding: 10px;
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
+  }
+
   .forecastItems {
     display: inline-flex;
-    overflow-x: auto; /* Make the list horizontally scrollable */
+    overflow-x: auto;
     width: 100%;
   }
   
@@ -126,15 +155,21 @@
     flex-direction: column;
     align-items: center;
     padding: 0 10px;
+    text-shadow: 1.3px 1.3px #000;
+  }
+  
+  ::-webkit-scrollbar {
+    height: 6px;
+    background-color: rgba(255, 255, 255, 0.1);
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.3);
+    border-radius: 3px;
   }
 
-  .minMaxTemps {
-    font-size: 1.5rem;
-    color: #ffffff;
-    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
-  }
-  .pollenRiskImage {
-	max-width: 24px;
-	max-height: 24px;
-	object-fit: contain;
-  }
+  .pollenRiskImg{
+    max-width: 24px;
+    max-height: 24px;
+    object-fit: contain;
+    }
