--- a/src/components/iphone/style.less
+++ b/src/components/iphone/style.less
@@ -1,175 +1,139 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    background-color: #333;
-    color: #f0f0f0;
-    width: 414px;
-    height: 736px;
-    padding-top: 80px;
-    margin: 0 auto;
-    font-family: 'Helvetica', 'Arial', sans-serif;
-    position: relative;
-    overflow: hidden;
-  }
-  
-  .backgroundImage {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  
-  .city {
-    font-size: 1.8em;
-    font-weight: 600;
-    margin-bottom: 10px;
-    text-shadow: 1px 1px #000;
-  }
-  
-  .conditions {
-    font-size: 1.2em;
-    margin-bottom: 10px;
-    text-shadow: 1px 1px #000;
-  }
-  
-  .temperature {
-    font-size: 4.8em;
-    font-weight: 300;
-    letter-spacing: -2px;
-    text-shadow: 1px 1px #000;
-    margin-bottom: 15px;
-  }
-
-  .weatherInfo,
-  .airQualityInfo,
-  .pollenInfo,
-  .hourlyForecast {
-    margin-bottom: 20px;
-    text-align: left;
-    padding: 0 20px;
-  }
-  
-  .infoTitle {
-    font-size: 1.3em;
-    font-weight: 600;
-    margin-bottom: 10px;
-    text-shadow: 1px 1px #000;
-  }
-  
-  .infoSubtitle {
-    font-size: 1.1em;
-    margin-bottom: 5px;
-    text-shadow: 1px 1px #000;
-  }
-
-  .minMaxTemps {
-    font-size: 1.5rem;
-    color: #ffffff;
-    text-shadow: 1px 1px #000;
-  }
-  
-.search {
-    transition: width 0.5s, border-radius 0.5s;
-    width: 40px;
-    height: 40px;
-    border-radius: 20px;
-    border: none;
-    cursor: pointer;
-    margin-bottom: 20px;
-    &:hover {
-      background: rgba(253, 246, 246, 0.871);
-      box-shadow: 0 0 0 3px rgb(41, 67, 95);
-    }
-    &:focus {
-      outline: none;
-      box-shadow: none;
-      padding-left: 15px;
-      cursor: text;
-      width: 300px;
-      background: rgb(255, 255, 255);
-    }
-    &:not(:focus) {    
-        text-indent:-5000px;    
-    }
+  display: flex;
+  flex-direction: column;
+  background-color: #333;
+  color: #f0f0f0;
+  width: 414px;
+  height: 736px;
+  margin: 0 auto;
+  font-family: 'Helvetica', 'Arial', sans-serif;
+  position: relative;
+  overflow: hidden;
 }
-  
+
+.backgroundImage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.city {
+  font-size: 1.8em;
+  font-weight: 600;
+  margin-bottom: 10px;
+  text-shadow: 1px 1px #000;
+}
+
+.conditions {
+  font-size: 1.2em;
+  margin-bottom: 10px;
+  text-shadow: 1px 1px #000;
+}
+
+.temperature {
+  font-size: 4.8em;
+  font-weight: 300;
+  letter-spacing: -6px;
+  text-shadow: 1px 1px #000;
+  margin-bottom: 15px;
+}
+
+.weatherInfo,
+.airQualityInfo,
+.pollenInfo {
+  margin-bottom: 20px;
+  text-align: left;
+  padding: 0 20px;
+}
+
+.infoTitle {
+  font-size: 1.3em;
+  font-weight: 600;
+  margin-bottom: 10px;
+  text-shadow: 1px 1px #000;
+}
+
+.infoSubtitle {
+  font-size: 1.1em;
+  margin-bottom: 5px;
+  text-shadow: 1px 1px #000;
+}
+
+.search {
+  position: relative;
+  transition: width 0.5s, border-radius 0.5s;
+  width: 40px;
+  height: 40px;
+  left: 40px;
+  border-radius: 20px;
+  border: none;
+  cursor: pointer;
+  &:hover {
+    background: rgba(253, 246, 246, 0.871);
+  }
+  &:focus {
+    outline: none;
+    box-shadow: none;
+    padding-left: 15px;
+    cursor: text;
+    width: 300px;
+    background: rgb(255, 255, 255);
+  }
+  &:not(:focus) {    
+      text-indent:-5000px;    
+  }
+}
+
 .searchIcon {
-    position: relative;
-    width: 40px;
-    left: -40px;
-    top: -8px;
-    cursor: pointer;
-  }
+  position: relative;
+  width: 40px;
+  cursor: pointer;
+}
 
-  .searchWrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    margin-bottom: 20px;
-    margin-left: 20px;
-  }
-  
-  .forecastItemTime,
-  .forecastItemTemp {
-    text-shadow: 1px 1px #000;
-  }
+.searchWrapper {
+  display: flex;
+  padding: 20px;
+  width: auto;
+  justify-content: end;
+}
 
-  .hourlyForecastOverlay {
-    position: absolute;
-    bottom: 50px; /* Adjust this value to move the overlay up or down */
-    left: 0;
-    width: 100%;
-    height: 110px;
-    background: rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(10px);
-    z-index: 1;
-  }
-  
-  .hourlyForecast {
-    position: absolute; /* Change from relative to absolute */
-    z-index: 2;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 110px;
-    padding: 10px;
-    overflow-x: auto;
-    overflow-y: hidden;
-    white-space: nowrap;
-  }
+.hourlyForecast {
+  overflow-x: auto;
+  white-space: nowrap;
+  backdrop-filter: blur(3.5px);
+  padding: 18px;
+}
 
-  .forecastItems {
-    display: inline-flex;
-    overflow-x: auto;
-    width: 100%;
-  }
-  
-  .forecastItem {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 0 10px;
-    text-shadow: 1.3px 1.3px #000;
-  }
-  
-  ::-webkit-scrollbar {
-    height: 6px;
-    background-color: rgba(255, 255, 255, 0.1);
-  }
-  
-  ::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 255, 255, 0.3);
-    border-radius: 3px;
-  }
+.forecastWrapper {
+  margin-top: auto;
+}
 
-  .pollenRiskImg{
-    max-width: 24px;
-    max-height: 24px;
-    object-fit: contain;
-    }
+.forecastItems {
+  display: inline-flex;
+  overflow-x: auto; /* Make the list horizontally scrollable */
+}
+
+.forecastItem {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 14px;
+}
+
+.minMaxTemps {
+  font-size: 1.5rem;
+  color: #ffffff;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
+}
+
+.pollenRiskImage {
+  max-width: 24px;
+  max-height: 24px;
+  object-fit: contain;
+}
