--- a/src/components/iphone/style.less
+++ b/src/components/iphone/style.less
@@ -132,7 +132,7 @@
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
 }
 
-.pollenRiskImage {
+.pollenRiskImg {
   max-width: 24px;
   max-height: 24px;
   object-fit: contain;
