--- a/src/components/iphone/style.less
+++ b/src/components/iphone/style.less
@@ -39,7 +39,7 @@
 .temperature {
   font-size: 4.8em;
   font-weight: 300;
-  letter-spacing: -6px;
+  letter-spacing: -2px;
   text-shadow: 1px 1px #000;
   margin-bottom: 15px;
 }
@@ -62,6 +62,12 @@
 .infoSubtitle {
   font-size: 1.1em;
   margin-bottom: 5px;
+  text-shadow: 1px 1px #000;
+}
+
+.minMaxTemps {
+  font-size: 1.5rem;
+  color: #ffffff;
   text-shadow: 1px 1px #000;
 }
 
@@ -124,12 +130,19 @@
   flex-direction: column;
   align-items: center;
   padding: 0 14px;
+  text-shadow: 1.3px 1.3px #000;
 }
 
-.minMaxTemps {
-  font-size: 1.5rem;
-  color: #ffffff;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
+::-webkit-scrollbar {
+  height: 6px;
+  background-color: rgba(255, 255, 255, 0.1);
+  display: none;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 3px;
+  display: none;
 }
 
 .pollenRiskImg {
