--- a/src/components/iphone/style.less
+++ b/src/components/iphone/style.less
@@ -9,6 +9,7 @@
   font-family: 'Helvetica', 'Arial', sans-serif;
   position: relative;
   overflow: hidden;
+	user-select: none;
 }
 
 .backgroundImage {
