--- a/src/components/iphone/style.less
+++ b/src/components/iphone/style.less
@@ -83,6 +83,7 @@
   cursor: pointer;
   &:hover {
     background: rgba(253, 246, 246, 0.871);
+    -webkit-tap-highlight-color: rgba(253, 246, 246, 0.871);
   }
   &:focus {
     outline: none;
@@ -101,6 +102,7 @@
   position: relative;
   width: 40px;
   cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .searchWrapper {
