--- a/src/components/iphone/style.less
+++ b/src/components/iphone/style.less
@@ -1,155 +1,184 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  background-color: #333;
-  color: #f0f0f0;
-  width: 414px;
-  height: 736px;
-  margin: 0 auto;
-  font-family: 'Helvetica', 'Arial', sans-serif;
-  position: relative;
+body {
+  margin: 0;
+  padding: 0;
   overflow: hidden;
-  user-select: none;
 }
 
-.backgroundImage {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
+.container {
+    display: flex;
+    flex-direction: column;
+    background-color: #333;
+    color: #f0f0f0;
+    width: 414px;
+    height: 736px;
+    padding-top: 50px;
+    margin: 0 auto;
+    font-family: 'Helvetica', 'Arial', sans-serif;
+    position: relative;
+    overflow: hidden;
+    user-select: none;
+  }
+  
+  .backgroundImage {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  
+  .city {
+    font-size: 2em;
+    font-weight: 600;
+    margin-bottom: 5px;
+    text-shadow: 1px 1px #000;
+  }
+  
+  .conditions {
+    font-size: 1.2em;
+    margin-bottom: 0px;
+    margin-top: 10px;
+    text-shadow: 1px 1px #000;
+  }
+  
+  .temperature {
+    font-size: 4.8em;
+    font-weight: 300;
+    letter-spacing: -2px;
+    text-shadow: 1px 1px #000;
+    margin-bottom: 10px;
+  }
 
-.city {
-  font-size: 1.8em;
-  font-weight: 600;
-  margin-bottom: 10px;
-  text-shadow: 1px 1px #000;
-}
+  .weatherInfo,
+  .airQualityInfo,
+  .pollenInfo,
+  .hourlyForecast {
+    margin-bottom: 20px;
+    text-align: left;
+    padding: 0 20px;
+  }
+  
+  .infoTitle {
+    font-size: 1.3em;
+    font-weight: 600;
+    margin-bottom: 10px;
+    text-shadow: 1px 1px #000;
+  }
+  
+  .infoSubtitle {
+    font-size: 1.1em;
+    margin-bottom: 5px;
+    text-shadow: 1px 1px #000;
+  }
 
-.conditions {
-  font-size: 1.2em;
-  margin-bottom: 10px;
-  text-shadow: 1px 1px #000;
-}
-
-.temperature {
-  font-size: 4.8em;
-  font-weight: 300;
-  letter-spacing: -2px;
-  text-shadow: 1px 1px #000;
-  margin-bottom: 15px;
-}
-
-.weatherInfo,
-.airQualityInfo,
-.pollenInfo {
-  margin-bottom: 20px;
-  text-align: left;
-  padding: 0 20px;
-}
-
-.infoTitle {
-  font-size: 1.3em;
-  font-weight: 600;
-  margin-bottom: 10px;
-  text-shadow: 1px 1px #000;
-}
-
-.infoSubtitle {
-  font-size: 1.1em;
-  margin-bottom: 5px;
-  text-shadow: 1px 1px #000;
-}
-
-.minMaxTemps {
-  font-size: 1.5rem;
-  color: #ffffff;
-  text-shadow: 1px 1px #000;
-}
-
+  .minMaxTemps {
+    font-size: 1.5rem;
+    color: #ffffff;
+    text-shadow: 1px 1px #000;
+  }
+  
 .search {
-  position: relative;
-  transition: width 0.5s, border-radius 0.5s;
-  width: 40px;
-  height: 40px;
-  left: 40px;
-  border-radius: 20px;
-  border: none;
-  cursor: pointer;
-  &:hover {
-    background: rgba(253, 246, 246, 0.871);
-    -webkit-tap-highlight-color: rgba(253, 246, 246, 0.871);
-  }
-  &:focus {
-    outline: none;
-    box-shadow: none;
-    padding-left: 15px;
-    cursor: text;
-    width: 300px;
-    background: rgb(255, 255, 255);
-  }
-  &:not(:focus) {    
-      text-indent:-5000px;    
-  }
+    transition: width 0.5s, border-radius 0.5s;
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+    border: none;
+    cursor: pointer;
+    margin-bottom: 20px;
+    &:hover {
+      background: rgba(253, 246, 246, 0.871);
+      box-shadow: 0 0 0 3px rgb(41, 67, 95);
+    }
+    &:focus {
+      outline: none;
+      box-shadow: none;
+      padding-left: 15px;
+      cursor: text;
+      width: 300px;
+      background: rgb(255, 255, 255);
+    }
+    &:not(:focus) {    
+        text-indent:-5000px;    
+    }
 }
-
+  
 .searchIcon {
-  position: relative;
-  width: 40px;
-  cursor: pointer;
-  -webkit-tap-highlight-color: transparent;
-}
+    position: relative;
+    width: 40px;
+    left: -40px;
+    top: -8px;
+    cursor: pointer;
+  }
 
-.searchWrapper {
-  display: flex;
-  padding: 20px;
-  width: auto;
-  justify-content: end;
-}
+  .searchWrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 10px;
+    margin-left: 20px;
+  }
+  
+  .forecastItemTime,
+  .forecastItemTemp {
+    text-shadow: 1px 1px #000;
+  }
 
-.hourlyForecast {
-  overflow-x: auto;
-  white-space: nowrap;
-  backdrop-filter: blur(3.5px);
-  padding: 18px;
-}
+  .hourlyForecastOverlay {
+    position: absolute;
+    bottom: 0; /* Adjust this value to move the overlay up or down */
+    left: 0;
+    width: 100%;
+    height: 135px;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(5px);
+    z-index: 3;
+    }
+  
+    .hourlyForecast {
+      position: absolute; /* Change from relative to absolute */
+      z-index: 2;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 110px;
+      padding: 10px;
+      overflow-x: auto;
+      overflow-y: hidden;
+      white-space: nowrap;
+      }
 
-.forecastWrapper {
-  margin-top: auto;
-}
+  .forecastItems {
+    display: inline-flex;
+    overflow-x: auto;
+    width: 100%;
+    padding-bottom: 10px;
+  }
+  
+  .forecastItem {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 10px;
+    text-shadow: 1.3px 1.3px #000;
+  }
+  
+  ::-webkit-scrollbar {
+    height: 7px;
+    background-color: rgba(255, 255, 255, 0.1);
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.3);
+    border-radius: 3px;
+  }
 
-.forecastItems {
-  display: inline-flex;
-  overflow-x: auto; /* Make the list horizontally scrollable */
-}
-
-.forecastItem {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0 14px;
-  text-shadow: 1.3px 1.3px #000;
-}
-
-::-webkit-scrollbar {
-  height: 6px;
-  background-color: rgba(255, 255, 255, 0.1);
-  display: none;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: rgba(255, 255, 255, 0.3);
-  border-radius: 3px;
-  display: none;
-}
-
-.pollenRiskImg {
-  max-width: 24px;
-  max-height: 24px;
-  object-fit: contain;
-}
+  .pollenRiskImg{
+    max-width: 24px;
+    max-height: 24px;
+    object-fit: contain;
+    }
