--- a/src/components/iphone/style.less
+++ b/src/components/iphone/style.less
@@ -91,7 +91,7 @@ body {
     margin-bottom: 20px;
     &:hover {
       background: rgba(253, 246, 246, 0.871);
-      box-shadow: 0 0 0 3px rgb(41, 67, 95);
+      box-shadow: 0 0 0 3px #444;
     }
     &:focus {
       outline: none;
@@ -181,4 +181,21 @@ body {
     max-width: 24px;
     max-height: 24px;
     object-fit: contain;
+    }
+
+    .locationButton {
+      background-color: rgb(255, 255, 255);
+      border: none;
+      border-radius: 4px;
+      color: #333;
+      cursor: pointer;
+      font-size: 14px;
+      margin-left: 10px;
+      margin-right: 50px;
+      margin-bottom: 20px;
+      padding: 8px 12px;
+      &:hover {
+        background: rgba(253, 246, 246, 0.871);
+        box-shadow: 0 0 0 3px #444;
+      }
     }
