--- a/src/components/iphone/style.less
+++ b/src/components/iphone/style.less
@@ -82,45 +82,32 @@ body {
   }
   
 .search {
+    background-color: #ffffff;
     transition: width 0.5s, border-radius 0.5s;
-    width: 40px;
+    width: 300px;
+    padding-left: 40px;
+    margin-left: -25px;
     height: 40px;
     border-radius: 20px;
     border: none;
-    cursor: pointer;
+    outline: none;
+    cursor: text;
     margin-bottom: 20px;
-    &:hover {
-      background: rgba(253, 246, 246, 0.871);
-      box-shadow: 0 0 0 3px #444;
-    }
-    &:focus {
-      outline: none;
-      box-shadow: none;
-      padding-left: 15px;
-      cursor: text;
-      width: 300px;
-      background: rgb(255, 255, 255);
-    }
-    &:not(:focus) {    
-        text-indent:-5000px;    
-    }
 }
   
 .searchIcon {
     position: relative;
-    width: 40px;
-    left: -40px;
+    width: 20px;
     top: -8px;
-    cursor: pointer;
+    left: 5px;
   }
 
-  .searchWrapper {
+  .topWrapper {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    margin-bottom: 10px;
-    margin-left: 20px;
+    margin: 15px;
   }
   
   .forecastItemTime,
@@ -139,18 +126,18 @@ body {
     z-index: 3;
     }
   
-    .hourlyForecast {
-      position: absolute; /* Change from relative to absolute */
-      z-index: 2;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      height: 110px;
-      padding: 10px;
-      overflow-x: auto;
-      overflow-y: hidden;
-      white-space: nowrap;
-      }
+  .hourlyForecast {
+    position: absolute; /* Change from relative to absolute */
+    z-index: 2;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 110px;
+    padding: 10px;
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
+    }
 
   .forecastItems {
     display: inline-flex;
@@ -163,7 +150,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 10px;
+    padding: 0 15px;
     text-shadow: 1.3px 1.3px #000;
   }
   
@@ -183,19 +170,26 @@ body {
     object-fit: contain;
     }
 
-    .locationButton {
-      background-color: rgb(255, 255, 255);
-      border: none;
-      border-radius: 4px;
-      color: #333;
-      cursor: pointer;
-      font-size: 14px;
-      margin-left: 10px;
-      margin-right: 50px;
-      margin-bottom: 20px;
-      padding: 8px 12px;
-      &:hover {
-        background: rgba(253, 246, 246, 0.871);
-        box-shadow: 0 0 0 3px #444;
-      }
+  .locationButton {
+    background-color: #ffffff;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    font-size: 14px;
+    margin-bottom: 20px;
+    margin-left: 15px;
+    &:hover {
+      background: rgba(253, 246, 246, 0.871);
     }
+  }
+
+  .locationIcon {
+    position: relative;
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
+    right: 35px;
+    top: -8px;
+  }
