--- a/src/components/iphone/style.less
+++ b/src/components/iphone/style.less
@@ -53,13 +53,29 @@ body {
     margin-bottom: 10px;
   }
 
-  .weatherInfo,
+  .weatherInfo {
+    margin-bottom: 20px;
+    text-align: center;
+    padding: 0 20px;
+  }
+
+
   .airQualityInfo,
   .pollenInfo,
   .hourlyForecast {
     margin-bottom: 20px;
     text-align: left;
     padding: 0 20px;
+  }
+
+  .airQualityInfo,
+  .pollenInfo {
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(5px);    
+    border-radius: 20px;
+    margin: 0 20px 20px 20px;
+    padding-top: 9px;
+    padding-bottom: 3px;
   }
   
   .infoTitle {
@@ -81,7 +97,7 @@ body {
     text-shadow: 1px 1px #000;
   }
   
-.search {
+  .search {
     background-color: #ffffff;
     transition: width 0.5s, border-radius 0.5s;
     width: 300px;
@@ -107,7 +123,8 @@ body {
     justify-content: center;
     align-items: center;
     width: 100%;
-    margin: 15px;
+    margin-bottom: 10px;
+    margin-left: 20px;
   }
   
   .forecastItemTime,
@@ -170,26 +187,26 @@ body {
     object-fit: contain;
     }
 
-  .locationButton {
-    background-color: #ffffff;
-    border: none;
-    border-radius: 50px;
-    cursor: pointer;
-    width: 40px;
-    height: 40px;
-    font-size: 14px;
-    margin-bottom: 20px;
-    margin-left: 15px;
-    &:hover {
-      background: rgba(253, 246, 246, 0.871);
+    .locationButton {
+      background-color: #ffffff;
+      border: none;
+      border-radius: 50px;
+      cursor: pointer;
+      width: 40px;
+      height: 40px;
+      font-size: 14px;
+      margin-bottom: 20px;
+      margin-left: 15px;
+      &:hover {
+        background: rgba(253, 246, 246, 0.871);
+      }
     }
-  }
-
-  .locationIcon {
-    position: relative;
-    cursor: pointer;
-    width: 30px;
-    height: 30px;
-    right: 35px;
-    top: -8px;
-  }
+  
+    .locationIcon {
+      position: relative;
+      cursor: pointer;
+      width: 30px;
+      height: 30px;
+      right: 35px;
+      top: -8px;
+    }
