--- a/src/components/button/style_ipad.less
+++ b/src/components/button/style_ipad.less
@@ -1,10 +1,14 @@
+// Import global style helpers
 @import '~style/helpers';
 
+// Container styles
 .container {
 	display: flex;
 	justify-content: center;
 	margin-top: 100px;
 }
+
+// Button styles
 .container button {
 	margin: 0 auto;
 	font-size: 2.5rem;
@@ -17,6 +21,8 @@
 	border-radius: 3px;
 	transition: all 0.3s ease-in-out;
 }
+
+// Button hover styles
 .container button:hover {
 	background: #fff;
 	color: #D1C3BB;
