--- a/src/components/iphone/style.less
+++ b/src/components/iphone/style.less
@@ -1,9 +1,11 @@
+/* Main body styling - reset margin, padding, and disable overflow */
 body {
   margin: 0;
   padding: 0;
   overflow: hidden;
 }
 
+/* Main container styling */
 .container {
     display: flex;
     flex-direction: column;
@@ -18,7 +20,8 @@ body {
     overflow: hidden;
     user-select: none;
   }
-  
+
+/* Styling for background image */
   .backgroundImage {
     position: absolute;
     top: 0;
@@ -30,21 +33,24 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
   }
-  
+
+/* City name styling */
   .city {
     font-size: 2em;
     font-weight: 600;
     margin-bottom: 5px;
     text-shadow: 1px 1px #000;
   }
-  
+
+/* Weather conditions styling */
   .conditions {
     font-size: 1.2em;
     margin-bottom: 0px;
     margin-top: 10px;
     text-shadow: 1px 1px #000;
   }
-  
+
+/* Temperature styling */
   .temperature {
     font-size: 4.8em;
     font-weight: 300;
@@ -53,13 +59,14 @@ body {
     margin-bottom: 10px;
   }
 
+/* Weather info container styling */
   .weatherInfo {
     margin-bottom: 20px;
     text-align: center;
     padding: 0 20px;
   }
 
-
+/* Air quality and pollen info container styling */
   .airQualityInfo,
   .pollenInfo,
   .hourlyForecast {
@@ -68,6 +75,7 @@ body {
     padding: 0 20px;
   }
 
+/* Background and padding styling for air quality and pollen info containers */
   .airQualityInfo,
   .pollenInfo {
     background: rgba(255, 255, 255, 0.1);
@@ -77,26 +85,30 @@ body {
     padding-top: 9px;
     padding-bottom: 3px;
   }
-  
+
+/* Info title styling */
   .infoTitle {
     font-size: 1.3em;
     font-weight: 600;
     margin-bottom: 10px;
     text-shadow: 1px 1px #000;
   }
-  
+
+/* Info subtitle styling */
   .infoSubtitle {
     font-size: 1.1em;
     margin-bottom: 5px;
     text-shadow: 1px 1px #000;
   }
 
+/* Minimum and maximum temperature styling */
   .minMaxTemps {
     font-size: 1.5rem;
     color: #ffffff;
     text-shadow: 1px 1px #000;
   }
-  
+
+/* Search box styling */
   .search {
     background-color: #ffffff;
     transition: width 0.5s, border-radius 0.5s;
@@ -110,7 +122,8 @@ body {
     cursor: text;
     margin-bottom: 20px;
 }
-  
+
+/* Search icon styling */
 .searchIcon {
     position: relative;
     width: 20px;
@@ -118,6 +131,7 @@ body {
     left: 5px;
   }
 
+/* Top wrapper styling */
   .topWrapper {
     display: flex;
     justify-content: center;
@@ -126,12 +140,14 @@ body {
     margin-bottom: 10px;
     margin-left: 20px;
   }
-  
+
+/* Forecast item time and temperature styling */
   .forecastItemTime,
   .forecastItemTemp {
     text-shadow: 1px 1px #000;
   }
 
+/* Hourly forecast overlay styling */
   .hourlyForecastOverlay {
     position: absolute;
     bottom: 0; /* Adjust this value to move the overlay up or down */
@@ -142,7 +158,8 @@ body {
     backdrop-filter: blur(5px);
     z-index: 3;
     }
-  
+
+/* Hourly forecast container styling */
   .hourlyForecast {
     position: absolute; /* Change from relative to absolute */
     z-index: 2;
@@ -156,13 +173,15 @@ body {
     white-space: nowrap;
     }
 
+/* Forecast items container styling */
   .forecastItems {
     display: inline-flex;
     overflow-x: auto;
     width: 100%;
     padding-bottom: 10px;
   }
-  
+
+/* Individual forecast item styling */
   .forecastItem {
     display: flex;
     flex-direction: column;
@@ -170,23 +189,27 @@ body {
     padding: 0 15px;
     text-shadow: 1.3px 1.3px #000;
   }
-  
+
+/* Scrollbar styling */
   ::-webkit-scrollbar {
     height: 7px;
     background-color: rgba(255, 255, 255, 0.1);
   }
-  
+
+/* Scrollbar thumb styling */
   ::-webkit-scrollbar-thumb {
     background-color: rgba(255, 255, 255, 0.3);
     border-radius: 3px;
   }
 
+/* Pollen risk image styling */
   .pollenRiskImg{
     max-width: 24px;
     max-height: 24px;
     object-fit: contain;
     }
 
+/* Location button styling */
     .locationButton {
       background-color: #ffffff;
       border: none;
@@ -201,7 +224,8 @@ body {
         background: rgba(253, 246, 246, 0.871);
       }
     }
-  
+
+/* Location button hover effect */
     .locationIcon {
       position: relative;
       cursor: pointer;
